--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ remote_theme : renyuanz/leonids
 title: Daehyun Bae's Blog
 email: noahark0628@gmail.com
 description: A simple and awesome blog theme powered by jekyll.
-url: "https://daehyunbae.github.io" # the base hostname & protocol for your site
+url: "https://Daehyun-Bae.github.io" # the base hostname & protocol for your site
 keywords: ["blog", "jekyll"]
 
 #
