--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,9 +1,9 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
-# - name: Google
-#   link: http://www.google.com/
+# - name: Visual Computing Lab @ Sungkyunkwan University
+#   link: https://sites.google.com/site/vclabskku/
 #   date: July 2017 - <i class="fa fa-clock-o" aria-hidden="true" title="Until Now"></i>
-#   job: Programming Internship
+#   job: Graduate student (PhD.)
 
 # - name: Facebook
 #   link: http://www.facebook.com/
