--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ kramdown:
 #
 owner:
   name: Daehyun Bae
-  avatar: leonids-logo.png
+  avatar: avatar.png
   job: "Computer vision researcher"
   bio: #bio
   email: dhbae@skku.edu
