fix resume, guideline page

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ kramdown:
 owner:
   name: Daehyun Bae
   avatar: avatar.png
-  job: "Computer vision researcher"
+  job: "Smart contract developer"
   bio: #bio
   email: dhbae@skku.edu
   disqus-shortname:
