--- a/_data/index/education.yml
+++ b/_data/index/education.yml
@@ -1,6 +1,6 @@
 - name: Sungkyunkwan University (Ph.D.)
   link: http://www.skku.edu/
-  date: 2020 - <i class="fa fa-clock-o" aria-hidden="true" title="Until Now"></i>
+  date: 2020 - (pending)
 
 - name: Sungkyunkwan University (M.S.)
   link: http://www.skku.edu/
