--- a/_data/index/publication.yml
+++ b/_data/index/publication.yml
@@ -6,3 +6,8 @@
   date: Sensors, 2019
   author: <strong>Dae Hyun Bae</strong>, Jae Woo Kim, and Jae-Pil Heo
   website: https://www.mdpi.com/1424-8220/19/1/48
+
+- name: Local Attention Pyramid for Scene Image Generation
+  date: CVPR, 2022
+  author: Sangheon Shim, Sangeek Hyun, <strong>Dae Hyun Bae</strong>, and Jae-Pil Heo
+  website: 
