--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ owner:
   facebook: #username
   google:
     plus: #username
-    analytics:
+    analytics: 'G-E6XXST3JQZ'
     verify:
     ad-client:
     ad-slot:
